--- a/src/app/navbar/bandeja-in/bandeja-in.component.css
+++ b/src/app/navbar/bandeja-in/bandeja-in.component.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
   }
   body{
    width: 100%;
@@ -51,7 +53,7 @@ color: #13c298;
  
   .list-asignaciones .bottom{
     width: 95%;
-    height: 90%;
+    max-height: 100vh;
     background: white;
     display: flex;
     flex-direction: column;
@@ -750,6 +752,7 @@ color: #198d8d;
   b .new{
     display: none;
   }
+
 
 }
 
