--- a/src/app/navbar/gest-op/gest-op.component.css
+++ b/src/app/navbar/gest-op/gest-op.component.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 body{
-    padding: 40px 45px;
+    padding: 25px 25px;
     font-family: 'Poppins', sans-serif;
     background: transparent;
     box-sizing: border-box;
 }
 .title{
-    font-size: 22px;
-    color: black;
-    font-weight: bold;
+    line-height: 30px;
+    font-weight: 400;
+    font-size: 21px;
+    color: #398bf7;
     margin-bottom: 40px;
 }
 .modal-header{
@@ -18,7 +19,7 @@ body{
     font-size: 14px;
 }
 .nav-pills .nav-link.active{
-    color: teal;
+    color: #398bf7;
   
     background-color: white;
 }
@@ -30,19 +31,17 @@ body{
     content:"";
     position:absolute;
     top:0;
-    left:0;
+    left:100%;
     width:3px;
     height:100%;
-  background-color:teal;
+  background-color:#398bf7;
 }
 .nav-pills .nav-link {
     position: relative;
     border-radius: 0.25rem;
-    font-family: 'Poppins', sans-serif;
     color: black;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    background-color: #eee;
     margin-top: 1px;
+    margin-bottom: 10px;
 }
 
 .formulario{
@@ -110,9 +109,17 @@ body{
     font-size: 15px;
 }
 .col-9{
-    background: white;
-    border-radius: 5px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.25rem;
+}
+.divider{
+    width: 15px;
+    background: transparent;
 }
 .form-two{
     width: 50%;
@@ -133,6 +140,7 @@ body{
 }
 .form-two button:disabled{
     background-color: #909090;
+    box-shadow: none;
 }
 
 .form-two button i{
@@ -144,61 +152,43 @@ body{
     margin-right: 0;
 }
 .tablaxd {
-    border-collapse: separate; 
+    /* border-collapse: separate;  */
     font-size: 12.5px;
     width: 100%;
-    border-spacing: 0px 15px; 
+
+
    
 }
-.tablaxd td{
-    background: white;
-    overflow: hidden;
-  
-  
-}
-.tablaxd th{
-    background: transparent;
-    overflow: hidden;
-  
-  
-}
+.tablaxd td:nth-child(2){
+    font-weight: bold;
+ }
+ 
 .tablaxd thead{
-    background: transparent;
-    overflow: hidden;
-  
-  
+  background-color: #63a4fe;
+  color: white;
+
+ 
+}
+.dataTables_wrapper .dataTables_filter label{
+    margin-bottom: 25px !important;
+}
+.divider{
+    height: 25px;
 }
 
-.headtable th{
-    background: transparent;
-}
 .tablaxd .bodytable{
-    box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
-    border-radius: 5px;
-    
-    
     height: 50px;
 }
-.headtable{
-    background: transparent;
-    box-shadow: 0;
-}
-.tablaxd td:nth-child(1){
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-.tablaxd td:nth-last-child(1){
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding-left: 50px;
-}
 
-.tablaxd td:nth-last-child(2){
-
-    padding-left: 50px;
+.col-3{
+    flex: 0 0 22%;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.25rem;
 }
-
-
 
 .detail_img{
     background: blanchedalmond;
@@ -208,7 +198,9 @@ body{
 }
 /*div input style
 */
-
+.row{
+    margin: 0;
+}
 .input-style{
     display: flex;flex-direction: row;
     margin-top: 15px;
@@ -316,20 +308,31 @@ body{
 
 
 
-
-.btn-excel{
-    position: absolute;
-    top: 22px;
-    left: 400px;
-    padding: 5px 10px;
+.btn-excel,.btn-green,.btn-blue,.btn-red,.btn-yellow{
     font-size: 13px;
-    color: white;
-    border-radius: 5px;
-    border: none;
-    z-index: 4;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    background-color: #036c34;
     transition: transform .3s;
+    width: max-content;
+    padding: 3px 13px;
+    border-radius: 15px;
+    background: #06d79c;
+    border: 1px solid #06d79c;
+    box-shadow: 0 2px 2px 0 rgb(40 190 189 / 14%), 0 3px 1px -2px rgb(40 190 189 / 20%), 0 1px 5px 0 rgb(40 190 189 / 12%);
+    color: white;
+}
+.btn-blue{
+    background: #398bf7;
+    border: 1px solid #398bf7;
+    box-shadow: 0 14px 26px -12px rgb(23 105 255 / 42%), 0 4px 23px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(23 105 255 / 20%);
+}
+.btn-red{
+    background: #ef5350;
+    box-shadow: 0 14px 26px -12px rgb(239 83 80 / 42%), 0 4px 23px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(239 83 80 / 20%);
+    border: 1px solid #ef5350;
+}
+.btn-yellow{
+    background: #ffb22b;
+    box-shadow: 0 2px 2px 0 rgb(248 194 0 / 14%), 0 3px 1px -2px rgb(248 194 0 / 20%), 0 1px 5px 0 rgb(248 194 0 / 12%);
+    border: 1px solid #ffb22b;
 }
 .btn-excel:hover{
  transform: scale(1.02);
@@ -362,7 +365,7 @@ body{
     color: #909090;
 }
 .imgrow{
-    width: 300px;height: 150px;margin-top: 40px;margin-bottom: 50px
+    width: 100%;height: 150px;margin-top: 40px;margin-bottom: 50px
 
 }
 .cont-table{
@@ -394,8 +397,8 @@ body{
 }
 .nav-pills .nav-link.active{
     border-left: 0px !important;
- color: #4267b2;
-    border-bottom: 5px solid #4267b2;
+ color: #398bf7;
+    border-bottom: 2px solid #398bf7;
 }
 
 .nav-pills .nav-link.active::before{
@@ -419,6 +422,9 @@ body{
   
 }
 @media only screen and (max-width: 900px) {
+    .divider{
+        display: none;
+    }
     .bysede{
       flex-direction: row;
       justify-content: flex-end;
