--- a/src/app/reportes/reportes/reportes.component.css
+++ b/src/app/reportes/reportes/reportes.component.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 *{
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif;
+     */
+     font-family: 'Montserrat', sans-serif;
 }
 body{
     --color: white;
@@ -21,8 +24,8 @@ body{
     display: grid;
     padding: 25px 10px 25px 10px;
     grid-template-columns: 35% 35% 30%;
-    grid-template-rows: auto 620px;
-    height: auto;
+    grid-template-rows: auto max-content;
+    height: max-content;
 }
 /* generales */
 .flexr{
@@ -41,58 +44,74 @@ body{
 .report_total{
     grid-column: 3/4;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 4px;
+    padding-top: 10px;
     grid-row: 2/3;
     overflow: hidden;
     width: 100%;
     height: 100%;
 }
-.report_total h6,.list-psi h6{
-    font-size: 16px;
-    font-weight: bold;
+.report_total h6,.list-psi h6,.re .lab{
+   
     width: 100%;
     padding: 10px 20px;
-    margin-bottom: 0;
+    line-height: 22px;
+    font-size: 17px;
+    margin-bottom: 35px;
+    color: #455a64;
+    font-weight: 400;
+    border-left: 2px solid #5098f7;
 
 }
 .m,.h{
     position: relative;
     background: white;
-    height: 43%;
+    
     width: 100%;
-    padding-left: 25px;
+    display: flex;
+    align-items: center;
   
 }
 .m .lab,.h .lab{
     position: absolute;
-    top: 20px;
+    top: 35%;
     font-weight: bold;
     font-size: 14px;
     color: #00acc1;
 }
-.re .lab{
-    font-weight: bold;
+.m .lab i,.h .lab i{
+    font-size: 37px;
+    color: #398bf7;
+    margin-right: 5px;
+}
+.m .lab span,.h .lab span{
+  color: #455a64;
+  font-size: 15px;
+}
+.m .lab span label,.h .lab span label{
     font-size: 14px;
-    margin-top: 15px;
-    color: #00acc1;
-    padding-left: 25px;
+    font-weight: normal;
+    color: #99abb4;
+} 
+
+.content-h-m{
+    display: flex;
+    flex-direction: column;
+    height: max-content;
+}
+.table{
+    width: 85%;
+    margin: 0 auto;
+    font-size: 14px;
+    color: #67757C;
+}
+.table tr  td:nth-child(2){
+    font-weight: 600;
 }
 
-.m .total,.h .total{
-    justify-content: center;
-    padding-left: 30px;
-    width: 30%;
-    margin: 0;
-}
-.total label:first-child{
-    font-size: 25px;
-    margin: 0;
-    font-weight: 500;
-}
 /**--------------------- Lista de estudiante          ----------------------*/
 .list-psi{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-border-radius: 10px;
+border-radius: 5px;
 width: 100%;
 position: relative;
 background: white;
@@ -117,44 +136,33 @@ height: max-content;
 .selecttype option{
     font-size: 16px;
 }
+
 .tablaxd {
-    border-collapse: separate; 
+    /* border-collapse: separate;  */
     font-size: 12.5px;
     width: 100%;
-    border-spacing: 0px 7px; 
-}
-.tablaxd td{
-    background: white;
-    overflow: hidden;
-}
-.tablaxd th{
-    overflow: hidden;
-}
-.tablaxd thead{
-    color: #0f3971;
-    overflow: hidden;
-    background-color: white;
-}
-.tablaxd .bodytable{
-    box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
-    border-radius: 5px;   
-    height: 50px;
-}
 
+
+   
+}
 .tablaxd td:nth-child(2){
-   font-weight: bold;
-}
+    font-weight: bold;
+ }
+ 
+.tablaxd thead{
+  background-color: #63a4fe;
+  color: white;
 
+ 
+}
 
 /**----------------------Reporte por alumno --------------**/
 .reports{
     background-color: white;
     width: 100%;
     grid-column: 1/4;
- 
-    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 4px;
     
 }
 .info-personal{
@@ -167,22 +175,22 @@ height: max-content;
    
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 10px;
-    color: var(--color);
+    background-color: var(--color);
 }
 .info-personal:nth-child(1){
-    --color:#ffa726;
+    --color:#398bf7 ;
 }
 .info-personal:nth-child(2){
-    --color:#66bb6a;
+    --color:#745af2;
 }
 .info-personal:nth-child(3){
     --color:#e53935;
 }
 .info-personal:nth-child(4){
-    --color:#00acc1;
+    --color:#06d79c;
 }
 .info-personal:nth-child(5){
-    --color:#0f3971;
+    --color:#ffb22b;
 }
 .info-personal i{
   color: white;
@@ -247,8 +255,8 @@ height: max-content;
   }
   .nav-tabs .nav-link.active{
       border: none;
-      color: #007bff;
-      border-bottom: 3px solid #007bff;
+      color: #398bf7;
+      border-bottom: 2px solid #398bf7;
   }
 
  .fechas{
@@ -349,11 +357,6 @@ margin-top: 25px;
  display: flex;
 }
 
-.content-h-m{
-    display: flex;
-    flex-direction: column;
-    height: 95%;
-}
 
 .puntaje{
     display: flex;
