--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
-
+ <ng2-slim-loading-bar color="blue"></ng2-slim-loading-bar>
+<app-spinner-home  *ngIf="loading"></app-spinner-home>
 <router-outlet></router-outlet>
 <lib-ng-toast></lib-ng-toast>
