--- a/src/app/navbar/registrar-atencion/registrar-atencion.component.css
+++ b/src/app/navbar/registrar-atencion/registrar-atencion.component.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+
+  /* sidebar xdd*/
+  /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+
 * {
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
   }
 
   body{
