--- a/src/app/navbar/registrar-atencion/registrar-atencion.component.html
+++ b/src/app/navbar/registrar-atencion/registrar-atencion.component.html
@@ -247,13 +247,13 @@
     <div class="list-pac" >
     <app-spinner-blanc *ngIf="cargando" style="height:80%;" [message]="message"></app-spinner-blanc>
       <h5 class="title" *ngIf="!cargando" >Consultas iniciadas</h5>
-      <div class="card2" [ngClass]="{ 'xdd' : asig_actual== pac }" *ngFor="let
+      <div class="card2"  (click)="get_info_case(pac)" [ngClass]="{ 'xdd' : asig_actual== pac }" *ngFor="let
         pac of pacientes_asignados">
         <div class="left">
           <label for="" style="font-size: 18px;font-weight: bold;text-align:
             center;">{{pac.fecha |
             date:'MMM d'}} </label>
-          <i class="far fa-check-circle" (click)="get_info_case(pac)"
+          <i class="far fa-check-circle"
             style="color:#29b2e2;cursor: pointer;"></i>
 
         </div>
